--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,132 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-  <title>CRUDS</title>
-</head>
-<body class="bg-[#1e1e1e]">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./output.css" rel="stylesheet" />
+    <title>CRUDS</title>
+  </head>
+  <body class="bg-[#1e1e1e]">
     <!-- div parent -->
-<div class="w-[80%] m-auto">   
-  <h1 class="text-[30px] pt-5 flex justify-center font-bold text-white ">CRUDS</h1>
-  <p class="text-[20px]  text-white flex justify-center" >PRODUCT MANAGEMENT SYSTEM </p>
-  <!-- first input 1 -->
-<div class="flex justify-center">
-<input type="text " class="flex justify-center w-full items-center bg-black text-gray-600 p-3 m-3 rounded-sm grow " placeholder="title">
-</div>
-<!-- start of div input 2 -->
-<div class="flex flex-row justify-between w-full gap-3 col-span-4">
-<input type="text" placeholder="price" class="bg-black text-gray-600 rounded-sm p-2 grow ">
-<input type="text" placeholder="0" class="bg-black text-gray-600 rounded-sm  p-2 grow">
-<input type="text" placeholder="0" class="bg-black text-gray-600 rounded-sm  p-2 grow">
-<input type="text" placeholder="0" class="bg-black text-gray-600 rounded-sm  p-2 grow">
-</div>
-<!-- end of div input 2 -->
- <!-- input 3 -->
-<div class="flex justify-center">
-<input type="text " class="flex justify-center grow flex-wrap items-center bg-black text-gray-600 p-3 m-3 rounded-sm " placeholder="1">
-</div>
-<!-- end input 3  -->
+    <div class="w-[80%] m-auto">
+      <h1 class="text-[30px] pt-5 flex justify-center font-bold text-white">
+        CRUDS
+      </h1>
+      <p class="text-[20px] text-white flex justify-center">
+        PRODUCT MANAGEMENT SYSTEM
+      </p>
+      <!-- first input 1 -->
+      <div class="flex justify-center">
+        <input
+          type="text "
+          class="flex justify-center w-full items-center bg-black text-gray-600 p-3 m-3 rounded-sm grow"
+          placeholder="title"
+        />
+      </div>
+      <!-- start of div input 2 -->
+      <div class=" grid grid-cols-1 w-full gap-2">
+        <input
+          type="number"
+          placeholder="price"
+          class="bg-black text-gray-600 rounded-sm p-2"
+        />
+        <input
+          type="number"
+          placeholder="taxes"
+          class="bg-black text-gray-600 rounded-sm p-2"
+        />
+        <input
+          type="number"
+          placeholder="ads"
+          class="bg-black text-gray-600 rounded-sm p-2"
+        />
+        <input
+          type="number"
+          placeholder="discount"
+          class="bg-black text-gray-600 rounded-sm p-2"
+        />
+      </div>
+      <!-- end of div input 2 -->
+      <!-- input 3 -->
+      <div class="flex justify-center">
+        <input
+          type="number "
+          class="flex justify-center grow flex-wrap items-center bg-black text-gray-600 p-3 m-3 rounded-sm"
+          placeholder="count"
+        />
+      </div>
+      <!-- end input 3  -->
 
-<!-- input 4 -->
-<div class="flex justify-center">
-<input type="text " class="flex justify-center grow flex-wrap items-center bg-black text-gray-600 p-3 m-3 rounded-sm  " placeholder="category">
-</div>
-<!-- end input 4 -->
- <!--  button 1 -->
-<button class="flex justify-center flex-wrap items-center text-white bg-purple-900 rounded-full hover:bg-purple-700 w-[97%] mx-3 p-2 grow">
-    create
-</button>
-<!-- end button 1-->
+      <!-- input 4 -->
+      <div class="flex justify-center">
+        <input
+          type="text "
+          class="flex justify-center grow flex-wrap items-center bg-black text-gray-600 p-3 m-3 rounded-sm"
+          placeholder="category"
+        />
+      </div>
+      <!-- end input 4 -->
+      <!--  button 1 -->
+      <button
+        class="flex justify-center flex-wrap items-center cursor-pointer text-white bg-purple-900 rounded-full hover:bg-purple-700 w-[97%] mx-3 p-2 grow"
+      >
+        create
+      </button>
+      <!-- end button 1-->
 
-<!-- input 5 -->
- <input type="text" class="flex justify-center grow flex-wrap items-center w-full bg-black text-gray-600 p-3 m-3 rounded-sm  " placeholder="search">
+      <!-- input 5 -->
+      <div class="flex justify-center grow flex-wrap items-center">
+        <input
+          type="text"
+          class="w-full bg-black text-gray-600 p-3 m-3 rounded-sm"
+          placeholder="search"
+        />
+      </div>
+      <!-- end input 5 -->
 
-<!-- end input 5 -->
+      <!-- button 2 & 3 -->
+      <div class="w-full flex justify-around flex-wrap">
+        <button
+          class="bg-purple-900 hover:bg-purple-700 rounded-full p-2 w-[40%] cursor-pointer text-white"
+        >
+          search by title
+        </button>
+        <button
+          class="bg-purple-900 hover:bg-purple-700 rounded-full p-2 w-[40%] cursor-pointer text-white"
+        >
+          search by category
+        </button>
 
-<!-- button 2 & 3 -->
- <div class="w-full flex justify-around flex-wrap">
- <button class="bg-purple-900 hover:bg-purple-700 rounded-full p-2 w-[40%] text-white ">search by title </button>
- <button class="bg-purple-900 hover:bg-purple-700 rounded-full p-2 w-[40%] text-white ">search by category </button>
+        <!-- end of button 2 & 3 -->
 
- <!-- end of button 2 & 3 -->
+        <!-- button 4 -->
+        <button
+          class="flex justify-center items-center cursor-pointer  text-white bg-purple-900 rounded-full hover:bg-purple-700 w-[97%] mx-3 p-2 grow mt-5"
+        >
+          Delete All
+        </button>
+      </div>
+      <!-- end button 4 -->
 
- <!-- button 4 -->
-<button class="flex justify-center items-center text-white bg-purple-900 rounded-full hover:bg-purple-700 w-[97%] mx-3 p-2 grow mt-5" >
-    Delete All 
-</button>
- </div>
- <!-- end button 4 -->
+      <!-- start table !!!! -->
+      <table class="flex justify-around ">
+        <th class="font-bold text-white ">ID</th>
+        <th class="font-bold text-white ">TITLE</th>
+        <th class="font-bold text-white ">PRICE</th>
+        <th class="font-bold text-white ">TAXES</th>
+        <th class="font-bold text-white ">ADS</th>
+        <th class="font-bold text-white ">DISCOUNT</th>
+        <th class="font-bold text-white ">CATEGORY</th>
+        <th class="font-bold text-white ">UPDATE</th>
+        <th class="font-bold text-white ">DELETE</th>
+      </table>
+
+<tbody>
+   
+  
+</tbody>
 
 
-
-
-
-
- </div>
-</body>
+    </div>
+  </body>
 </html>
